--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -1,5 +1,5 @@
 = field_set do
-  = f.input :nomen
+  = f.input :procedure, as: :hidden
   = f.referenced_association :production
-- if @procedure.errors.count > 0
-  = @procedure.errors.messages.inspect
+- if f.object.errors.count > 0
+  = f.object.errors.messages.inspect
