--- a/app/views/backend/products/show.html.haml
+++ b/app/views/backend/products/show.html.haml
@@ -1,34 +1,37 @@
-=main_toolbar do |t|
-  -t.edit @product
-  -t.destroy(@product, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @product.destroyable?
+= main_toolbar do |t|
+  - t.edit @product
+  - t.destroy(@product, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @product.destroyable?
 
-=beehive do |b|
-  -b.cell :details do
+= beehive do |b|
+  - b.cell :details do
 
-    =attributes_list(@product) do |l| # liste des champs à afficher
-      -l.attribute :name
-      -l.attribute :variety, :url => true
-      -l.attribute :identification_number
-      -l.attribute :description
-    -if @product.picture.exists?
-      =image_tag(@product.picture.url(:thumb))
+    = attributes_list(@product) do |l| # liste des champs à afficher
+      - l.attribute :name
+      - l.attribute :variety, :url => true
+      - l.attribute :identification_number
+      - l.attribute :description
+    - if @product.picture.exists?
+      = image_tag(@product.picture.url(:thumb))
 
-  -b.tabbox do
-    -b.cell(:members) do
-      =list(:member)
-    -b.cell(:groups) do
-      =list(:group)
+  - b.tabbox do
+    - if @product.is_a?(ProductGroup)
+      - b.cell(:members) do
+        = list(:members)
+    - b.cell(:groups) do
+      = list(:groups)
 
-  -b.tabbox do
-    -b.cell(:content_products) do
-      =list(:content_product)
-    -b.cell(:places) do
-      =list(:place)
+  - b.tabbox do
+    - b.cell(:contained_products) do
+      = list(:contained_products)
+    - b.cell(:places) do
+      = list(:places)
 
-  -b.tabbox do
-    -b.cell(:incidents) do
-      =toolbar do |t|
-        -t.new(:params =>{:controller => :incidents, :target_id => @product.id, :target_type => @product.class.name})
-      =list(:incident)
-    -b.cell(tl(:x_indicators, :count => @product.indicator_data.count)) do
-      =list(:indicator)
+  - b.tabbox do
+    - b.cell(:intervention_casts) do
+      = list(:intervention_casts)
+    - b.cell(:incidents) do
+      = toolbar do |t|
+        - t.new(:params =>{:controller => :incidents, :target_id => @product.id, :target_type => @product.class.name})
+      = list(:incidents)
+    - b.cell(tl(:x_indicators, :count => @product.indicator_data.count)) do
+      = list(:indicators)
