demo work with animals (productions show view in progress)

--- a/app/views/backend/interventions/show.html.haml
+++ b/app/views/backend/interventions/show.html.haml
@@ -6,7 +6,7 @@
   - b.tabbox do
     - b.cell do
       = attributes_list(@intervention) do |l|
-        - l.attribute :procedure
+        - l.attribute :name
         - l.attribute :started_at
         - l.attribute :stopped_at
         - l.attribute :state
