--- a/app/views/backend/cultivable_land_parcels/show.html.haml
+++ b/app/views/backend/cultivable_land_parcels/show.html.haml
@@ -8,7 +8,7 @@
         =@cultivable_land_parcel.shape_svg(:width => 180, :height => 180, :class => :map)
       .info
         %span.title=CultivableLandParcel.human_attribute_name(:area_measure)
-        %span.value=@cultivable_land_parcel.shape_area.in_square_meter.convert(:hectare)
+        %span.value=@cultivable_land_parcel.shape_area.round(-2).in_square_meter.convert(:hectare)
 
 
     -b.cell do
