--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -11,7 +11,7 @@
       - l.attribute :campaign
       - l.attribute :activity
   
-  - if @production.product_nature.variety == "bos"
+  - if Nomen::Varieties[@production.product_nature.variety].self_and_parents.include?(Nomen::Varieties[:plant])
     - b.tabbox do
       - b.cell :map do
         %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableLandParcel.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
