--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -1,7 +1,7 @@
 = beehive(:production) do
   - hbox do
     - cell :cropping_plan
-    - cell :last_procedures
+    - cell :last_interventions
     - cell :last_products
   - tabbox do
     - cell :meteo do
