--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -1,5 +1,21 @@
-= field_set do
-  = f.input :procedure, as: :hidden
-  = f.referenced_association :production
-- if f.object.errors.count > 0
-  = f.object.errors.messages.inspect
+- if Procedo[params[:procedure]]
+  = field_set do
+    = f.input :procedure, as: :hidden
+    = f.referenced_association :production
+  - if f.object.errors.count > 0
+    = f.object.errors.messages.inspect
+
+
+- else # Root Procedure Natures
+  :ruby
+    natures = []
+    if params[:procedure_nature]
+      natures = Nomen::ProcedureNatures
+    else
+    end
+  - for procedure in Nomen::ProcedureNatures.roots
+    - link_to(procedure.human_name, {})
+    
+
+
+
