--- a/app/views/backend/dashboards/accountancy.html.haml
+++ b/app/views/backend/dashboards/accountancy.html.haml
@@ -4,5 +4,5 @@
   -hbox do
     -cell :collected_taxes
     -cell :bank_chart
-  -hbox do
+  -#hbox do
     -cell :rss, :title => "Actualité Gestion et Droit", :params => {:url => "http://www.lafranceagricole.fr/Rss/gestion-et-droit/actu-gestion-14676.html"}
