--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -4,7 +4,7 @@
     - cell :last_interventions
     - cell :last_products
   - tabbox do
-    - cell :meteo do
+    -# cell :meteo do
       %img{:alt => "Météo Saint-Porchaire heure par heure", :border => "0", :src => "http://meteorologic.net/vignette-previ-1h/6026.png", :style => "max-width: 100%; margin: 0 auto; display: block"}
-    - cell :rss, :title => "Tendances Bovins de Boucherie", :params => {:url => "http://www.lafranceagricole.fr/Rss/cours-et-marches/elevage/bovins-de-boucherie-157.html"}
+    -# cell :rss, :title => "Tendances Bovins de Boucherie", :params => {:url => "http://www.lafranceagricole.fr/Rss/cours-et-marches/elevage/bovins-de-boucherie-157.html"}
     - cell :last_milk_result
