--- a/app/views/backend/dashboards/relationship.html.haml
+++ b/app/views/backend/dashboards/relationship.html.haml
@@ -8,6 +8,6 @@
     -if Event.count > 0
       -b.cell :recent_events do
         =list(:recent_events)
-  -b.hbox do
+  -#b.hbox do
     -b.cell :rss, :title => "Dossiers", :params => {:url => "http://www.lafranceagricole.fr/Rss/dossiers-11.html"}
 
