--- a/app/views/backend/incoming_deliveries/_form.html.haml
+++ b/app/views/backend/incoming_deliveries/_form.html.haml
@@ -1,17 +1,17 @@
-=field_set do
-  -# TODO: Manage variables in :new parameters
-  =f.input :reference_number
-  =f.referenced_association :sender, :source => :suppliers
-  =f.referenced_association :address, :source => :own_mails
-  =f.referenced_association :mode
-  =f.input :received_at
+= field_set do
+  - # TODO: Manage variables in :new parameters
+  = f.input :reference_number
+  = f.referenced_association :sender, :source => :suppliers
+  = f.referenced_association :address, :source => :own_mails
+  = f.referenced_association :mode
+  = f.input :received_at
 
 .add
-  -id = rand(1_000_000).to_s(36)
-  %span=:add_item.tl
-  %span.input-append=text_field_tag(:variant_id, nil, 'data-selector' => url_for(:controller => :product_nature_variants, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :product_nature_variants), 'data-value-field' => "##{id}")
-  =hidden_field_tag(:variant_id, nil, :id => id)
-  =link_to(:add.tl, {:action => :new, :controller => :incoming_delivery_items, :external => "false"}, :class => "btn", :remote => true, 'data-update' => '#items', 'data-update-at' => 'bottom', 'data-with' => "##{id}")
+  - id = rand(1_000_000).to_s(36)
+  %span= :add_item.tl
+  %span.input-append= text_field_tag(:variant_id, nil, 'data-selector' => url_for(:controller => :product_nature_variants, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :product_nature_variants), 'data-value-field' => "##{id}")
+  = hidden_field_tag(:variant_id, nil, :id => id)
+  = link_to(:add.tl, {:action => :new, :controller => :incoming_delivery_items, :external => "false"}, :class => "btn", :remote => true, 'data-update' => '#items', 'data-update-at' => 'bottom', 'data-with' => "##{id}")
 
   :ruby
     # Trick to force form as multipart...
@@ -19,5 +19,5 @@
     f.input :mode, :as => :file
 
 #items.subforms
-  =f.backend_fields_for(:items) do |i|
-    =render "backend/incoming_delivery_items/form", :f => i
+  = f.backend_fields_for(:items) do |i|
+    = render "backend/incoming_delivery_items/form", :f => i
