--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -1,7 +1,26 @@
-- if Procedo[params[:procedure]]
+-# if !f.object.new_record? or procedure = Procedo[params[:procedure]]
+- if procedure = f.object.reference
   = field_set do
     = f.input :procedure, as: :hidden
     = f.referenced_association :production
+
+  = field_set :casting do
+    - if f.object.new_record?
+      - for name, variable in procedure.variables
+        - f.object.casts.new(variable: name) unless variable.new?
+    = f.backend_fields_for :casts do |v|
+      = v.input :variable, as: :hidden
+      = v.referenced_association :actor, label: v.object.reference.human_name
+
+  = field_set :operations do
+    - if f.object.operations.empty? or f.object.new_record?
+      - for id, operation in procedure.operations
+        - f.object.operations.new(position: id)
+    = f.backend_fields_for :operations do |v|
+      = v.input :position, as: :hidden
+      = v.input :started_at, label: v.object.reference.human_name
+      -# = v.input :stopped_at, label: v.object.reference.human_name
+
   - if f.object.errors.count > 0
     = f.object.errors.messages.inspect
 
