--- a/app/views/backend/journals/show.html.haml
+++ b/app/views/backend/journals/show.html.haml
@@ -3,7 +3,8 @@
   -t.edit @journal
   -t.close @journal if @journal.closable?
   -t.reopen @journal if @journal.reopenable?
-  -t.new :controller => :journal_entries, :journal_id => @journal.id
+  -t.new(:params => {:controller => :journal_entries, :journal_id => @journal.id})
+  
 
 =beehive do |b|
   -b.tabbox do
