add interventions_list in animal_medicine, animals, plant_medicines and cultivable_land_parcels

--- a/app/views/backend/animal_medicines/show.html.haml
+++ b/app/views/backend/animal_medicines/show.html.haml
@@ -5,3 +5,11 @@
   -b.cell do
     =attributes_list(@animal_medicine) do |l|
       -l.attribute :name
+
+  - b.tabbox do
+    - b.cell(:interventions) do
+      = toolbar do |t|
+        - t.new(:params =>{:controller => :interventions})
+      = list(:intervention_casts)
+    - b.cell(tl(:x_indicators, :count => @animal_medicine.indicator_data.count)) do
+      = list(:indicators)
