--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -77,5 +77,9 @@
       = toolbar do |t|
         - t.new(:params =>{:controller => :incidents, :target_id => @animal.id, :target_type => @animal.class.name})
       = list(:incidents)
+    - b.cell(:interventions) do
+      = toolbar do |t|
+        - t.new(:params =>{:controller => :interventions, :target_id => @animal.id})
+      = list(:intervention_casts)
     - b.cell(tl(:x_indicators, :count => @animal.indicator_data.count)) do
       = list(:indicators)
