--- a/app/views/backend/cultivable_land_parcels/show.html.haml
+++ b/app/views/backend/cultivable_land_parcels/show.html.haml
@@ -1,21 +1,21 @@
-=main_toolbar do |t|
-  -t.edit @cultivable_land_parcel
+= main_toolbar do |t|
+  - t.edit @cultivable_land_parcel
 
-=beehive do |b|
-  -b.tabbox do
-    -b.cell :general do
+= beehive do |b|
+  - b.tabbox do
+    - b.cell :general do
       .picture
-        =@cultivable_land_parcel.shape_svg(:width => 180, :height => 180, :class => :map)
+        = @cultivable_land_parcel.shape_svg(:width => 180, :height => 180, :class => :map)
       .info
-        %span.title=CultivableLandParcel.human_attribute_name(:area_measure)
-        %span.value=@cultivable_land_parcel.net_surface_area
+        %span.title= CultivableLandParcel.human_attribute_name(:area_measure)
+        %span.value= @cultivable_land_parcel.net_surface_area
 
-    -b.cell do
-      =attributes_list(@cultivable_land_parcel) do |l|
-        -l.attribute :name
+    - b.cell do
+      = attributes_list(@cultivable_land_parcel) do |l|
+        - l.attribute :name
 
-  -b.tabbox do
-    -b.cell(:content_products) do
-      =list(:content_products)
-    -b.cell(:productions) do
-      =list(:productions)
+  - b.tabbox do
+    - b.cell(:contained_products) do
+      = list(:contained_products)
+    - b.cell(:productions) do
+      = list(:productions)
