--- a/app/views/backend/deposits/show.html.haml
+++ b/app/views/backend/deposits/show.html.haml
@@ -1,24 +1,24 @@
-=main_toolbar do |t|
-  -t.export do |e|
-    -e.deposit @deposit.number, @deposit
-  -t.edit @deposit
+= main_toolbar do |t|
+  - t.export do |e|
+    - e.deposit @deposit.number, @deposit
+  - t.edit @deposit
 
-=attributes_list(@deposit) do |l|
-  -l.attribute :number
-  -l.attribute :cash, :url => true
-  -l.attribute :mode # , :url => true
-  -l.attribute :payments_count
-  -l.attribute :responsible
-  -l.attribute :description
-  -l.attribute :journal_entry, :url => true
+= attributes_list(@deposit) do |l|
+  - l.attribute :number
+  - l.attribute :cash, :url => true
+  - l.attribute :mode # , :url => true
+  - l.attribute :payments_count
+  - l.attribute :responsible
+  - l.attribute :description
+  - l.attribute :journal_entry, :url => true
 
-%h2=Deposit.human_attribute_name("payments")
-=list :payments
+%h2= Deposit.human_attribute_name("payments")
+= list :payments
 
 %table.list
   %tr.total
-    %th=tc(:payments_count, :mode=>@deposit.mode.name)
-    %td=@deposit.payments_count
+    %th= tc(:payments_count, mode: @deposit.mode.name)
+    %td= @deposit.payments_count
   %tr.total.important
-    %th=tc(:total)
-    %td=number_to_money(@deposit.amount, @deposit.cash.currency)
+    %th= tc(:total)
+    %td= @deposit.amount.l(currency: @deposit.currency)
