--- a/app/views/backend/entities/show.html.haml
+++ b/app/views/backend/entities/show.html.haml
@@ -1,15 +1,15 @@
 = main_toolbar do |t|
-  - t.export :entity, @entity
-  - t.edit @entity
-  - t.destroy(@entity, :method => :delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @entity.destroyable?
+  - t.export :entity, resource
+  - t.edit resource
+  - t.destroy(resource, :method => :delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if resource.destroyable?
 
 = beehive do |b|
   - b.tabbox do
-    - if @entity.addresses.count > 0 or @entity.picture
+    - if resource.addresses.count > 0 or resource.picture
       - b.cell :coordinates do
-        - if @entity.picture.file?
-          .picture= image_tag(@entity.picture.url(:identity))
-        - for address in @entity.addresses.order(:canal, :by_default)
+        - if resource.picture.file?
+          .picture= image_tag(resource.picture.url(:identity))
+        - for address in resource.addresses.order(:canal, :by_default)
           .info
             %span.title{:class => "canal-"+address.canal.to_s}= address.canal.text
             %span.value
@@ -23,61 +23,65 @@
                 = link_to(address.coordinate, address.coordinate)
               - else
                 = address.coordinate
+        - if EntityLink.of_entity(resource).actives.any?
+          .info
+            %span.title= :related_people.tl
+            %span.value= Entity.related_to(resource).map{|p| link_to(p.full_name, id: p.id)}.to_sentence.html_safe
 
     - b.cell :details do
-      = attributes_list(@entity) do |l|
+      = attributes_list(resource) do |l|
         - l.attribute :last_name
-        - l.attribute :first_name unless @entity.first_name.blank?
-        - l.attribute :nature if @entity.nature
+        - l.attribute :first_name unless resource.first_name.blank?
+        - l.attribute :nature if resource.nature
         - l.attribute :number
         - l.attribute :active
-        - l.custom Entity.human_attribute_name("country"), image_tag("countries/"+@entity.country+".png")+" "+t("countries."+@entity.country) unless @entity.country.blank?
-        - l.attribute :siren unless @entity.siren.blank?
-        - l.attribute :activity_code unless @entity.activity_code.blank?
-        - l.attribute :vat_number unless @entity.vat_number.blank?
-        - l.attribute :excise unless @entity.vat_number.blank?
-        - l.attribute :born_on unless @entity.born_on.blank?
-        - l.attribute :dead_on unless @entity.dead_on.blank?
+        - l.custom Entity.human_attribute_name("country"), image_tag("countries/"+resource.country+".png")+" "+t("countries."+resource.country) unless resource.country.blank?
+        - l.attribute :siren unless resource.siren.blank?
+        - l.attribute :activity_code unless resource.activity_code.blank?
+        - l.attribute :vat_number unless resource.vat_number.blank?
+        - l.attribute :excise unless resource.vat_number.blank?
+        - l.attribute :born_on unless resource.born_on.blank?
+        - l.attribute :dead_on unless resource.dead_on.blank?
         - l.attribute :prospect
         - l.attribute :client
-        - if @entity.client
+        - if resource.client
           -#l.attribute :category, :label => :name, :url => true
-          - l.attribute :first_met_on unless @entity.first_met_on.blank?
-          - l.attribute :proposer, :label => :full_name unless @entity.proposer.nil?
+          - l.attribute :first_met_on unless resource.first_met_on.blank?
+          - l.attribute :proposer, :label => :full_name unless resource.proposer.nil?
           - l.attribute :vat_subjected
-          - l.attribute :reminder_submissive unless @entity.reminder_submissive?
-          - l.attribute :authorized_payments_count unless @entity.authorized_payments_count.blank?
-          - l.attribute :deliveries_conditions unless @entity.deliveries_conditions.blank?
+          - l.attribute :reminder_submissive unless resource.reminder_submissive?
+          - l.attribute :authorized_payments_count unless resource.authorized_payments_count.blank?
+          - l.attribute :deliveries_conditions unless resource.deliveries_conditions.blank?
           - l.attribute :client_account, :url => true
         - l.attribute :supplier
-        - if @entity.supplier
+        - if resource.supplier
           - l.attribute :supplier_account, :url => true
         - l.attribute :transporter
 
-    - b.cell(tl(:x_observations, :count => @entity.observations.count)) do
+    - b.cell(tl(:x_observations, :count => resource.observations.count)) do
       = toolbar do |t|
-        - t.new :controller => :observations, :entity_id => @entity.id
+        - t.new :controller => :observations, :entity_id => resource.id
       = list(:observations)
 
   - b.tabbox do
-    -#b.cell(tl(:x_subscriptions, :count => @entity.subscriptions.count)) do
+    -# b.cell(tl(:x_subscriptions, :count => resource.subscriptions.count)) do
       = toolbar do |t|
-        - t.new(:controller => :subscriptions, :entity_id => @entity.id)
+        - t.new(:controller => :subscriptions, :entity_id => resource.id)
       = list(:subscriptions)
 
-    - b.cell(tl(:x_meetings, :count => @entity.participations.count)) do
+    - b.cell(tl(:x_events, :count => resource.participations.count)) do
       -#=toolbar do |t|
-        - t.new :controller => :meetings, :entity_id => @entity.id
-      = list(:meeting_participations)
+        - t.new :controller => :events, :entity_id => resource.id
+      = list(:event_participations)
 
-    - b.cell(tl(:x_entity_links, :count => EntityLink.of_entity(@entity).count)) do
+    - b.cell(tl(:x_entity_links, :count => EntityLink.of_entity(resource).count)) do
       = toolbar do |t|
-        - t.new :controller => :entity_links, :entity_id => @entity.id
+        - t.new :controller => :entity_links, :entity_id => resource.id
       = list(:links)
 
-    - b.cell(tl(:x_mandates, :count => @entity.mandates.count)) do
+    - b.cell(tl(:x_mandates, :count => resource.mandates.count)) do
       = toolbar do |t|
-        - t.new :controller => :mandates, :entity_id => @entity.id
+        - t.new :controller => :mandates, :entity_id => resource.id
       = list(:mandates)
 
 
@@ -86,22 +90,22 @@
         =  render "extra"
 
   - b.tabbox do
-    - b.cell(tl(:x_sales, :count => @entity.sales.count)) do
+    - b.cell(tl(:x_sales, :count => resource.sales.count)) do
       = toolbar do |t|
-        - t.new(:controller => :sales, :client_id => @entity.id)
+        - t.new(:controller => :sales, :client_id => resource.id)
       = list(:sales)
 
-    - b.cell(tl(:x_incoming_payments, :count => @entity.incoming_payments.count)) do
+    - b.cell(tl(:x_incoming_payments, :count => resource.incoming_payments.count)) do
       = toolbar do |t|
-        - t.new :controller => :incoming_payments, :payer_id => @entity.id
+        - t.new :controller => :incoming_payments, :payer_id => resource.id
       = list(:incoming_payments)
 
-    - b.cell(tl(:x_purchases, :count => @entity.purchases.count)) do
+    - b.cell(tl(:x_purchases, :count => resource.purchases.count)) do
       = toolbar do |t|
-        - t.new :controller => :purchases, :supplier_id => @entity.id
+        - t.new :controller => :purchases, :supplier_id => resource.id
       = list(:purchases)
 
-    - b.cell(tl(:x_outgoing_payments, :count => @entity.outgoing_payments.count)) do
+    - b.cell(tl(:x_outgoing_payments, :count => resource.outgoing_payments.count)) do
       = toolbar do |t|
-        - t.new :controller => :outgoing_payments, :payee_id => @entity.id
+        - t.new :controller => :outgoing_payments, :payee_id => resource.id
       = list(:outgoing_payments)
