--- a/app/views/backend/events/edit.html.haml
+++ b/app/views/backend/events/edit.html.haml
@@ -5,4 +5,4 @@
   .form-fields>=render(:partial => 'form', :locals => {:f => f})
   =form_actions do
     =submit_tag(tl(:update), 'data-disable-with' => tl(:please_wait))
-    =link_to(tl(:cancel), backend_events_url, (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
+    =link_to(tl(:cancel), backend_event_url(@event), (params[:dialog] ? {:class => 'btn', 'data-close-dialog' => params[:dialog]} : {:class => 'btn'}))
