--- a/app/views/backend/journals/draft.html.haml
+++ b/app/views/backend/journals/draft.html.haml
@@ -1,11 +1,11 @@
-=journals_tag
+= journals_tag
 
-=form_tag do
-  =form_fields do
-    =kujaku({}, :popover => false, :form => false) do |k|
-      -k.text :search
-      -k.crit :journal_period
-      -k.crit :journals
-    =list(:draft_items)
-  =form_actions do
-    =submit_tag(tc(:validate_selected_entries), "data-confirm" => tg(:are_you_sure), :name => :validate)
+= form_tag do
+  = form_fields do
+    = kujaku(popover: false, form: false) do |k|
+      - k.text :search
+      - k.crit :journal_period
+      - k.crit :journals
+    = list(:draft_items)
+  = form_actions do
+    = submit_tag(tc(:validate_selected_entries), "data-confirm" => tg(:are_you_sure), :name => :validate)
