--- a/app/views/backend/journals/show.html.haml
+++ b/app/views/backend/journals/show.html.haml
@@ -1,51 +1,52 @@
-=journals_tag
-=main_toolbar do |t|
-  -t.edit @journal
-  -t.close @journal if @journal.closable?
-  -t.reopen @journal if @journal.reopenable?
-  -t.new(:params => {:controller => :journal_entries, :journal_id => @journal.id})
+= journals_tag
+= main_toolbar do |t|
+  - t.edit resource
+  - t.close resource if resource.closable?
+  - t.reopen resource if resource.reopenable?
+  - t.new(:params => {:controller => :journal_entries, :journal_id => resource.id})
 
 
-=beehive do |b|
-  -b.tabbox do
-    -b.cell Journal.human_attribute_name(:entry_items) do
-      =kujaku({}, :popover => false) do |k|
-        -k.text
-        -k.crit :journal_entries_states
-        -k.crit :journal_period
+= beehive do |b|
+  - b.tabbox do
+    - b.cell Journal.human_attribute_name(:entry_items) do
+      = kujaku(popover: false) do |k|
+        - k.text
+        - k.crit :journal_entries_states
+        - k.crit :journal_period
 
-      =journal_view_tag
+      = journal_view_tag
 
-      -conditions = eval(controller.class.journal_entries_conditions)
-      -totals = {}
-      -totals[:debit]  = JournalEntry.sum(:real_debit, :conditions=>conditions)
-      -totals[:credit] = JournalEntry.sum(:real_credit, :conditions=>conditions)
-      -totals[:balance_debit] = totals[:balance_credit] = 0.0
-      -totals["balance_#{totals[:debit]>totals[:credit] ? 'debit' : 'credit'}".to_sym] = (totals[:debit]-totals[:credit]).abs
+      :ruby
+        conditions = eval(controller.class.journal_entries_conditions)
+        totals = {}
+        totals[:debit]  = JournalEntry.sum(:real_debit, :conditions=>conditions)
+        totals[:credit] = JournalEntry.sum(:real_credit, :conditions=>conditions)
+        totals[:balance_debit] = totals[:balance_credit] = 0.0
+        totals["balance_#{totals[:debit]>totals[:credit] ? 'debit' : 'credit'}".to_sym] = (totals[:debit]-totals[:credit]).abs
 
       .tab-content
-        =list(@journal_view.to_sym) do
-          -colspans = (@journal_view == "items" ? [6,1] : [3,3])
+        = list(resource_view.to_sym) do
+          - colspans = (resource_view == "items" ? [6, 1] : [3, 3])
           %tr.important.total
-            %th{:colspan=>colspans[0]}=tc :total
-            %td=number_to_money(totals[:debit], @journal.currency)
-            %td=number_to_money(totals[:credit], @journal.currency)
-            %th{:colspan=>colspans[1]}
-          -if totals[:balance_debit] != totals[:balance_credit]
+            %th{colspan: colspans[0]}= tc :total
+            %td= totals[:debit].l(currency: resource.currency)
+            %td= totals[:credit].l(currency: resource.currency)
+            %th{colspan: colspans[1]}
+          - if totals[:balance_debit] != totals[:balance_credit]
             %tr.important.total
-              %th{:colspan=>colspans[0]}=tc :balance
-              %td=number_to_money(totals[:balance_debit], @journal.currency)
-              %td=number_to_money(totals[:balance_credit], @journal.currency)
-              %th{:colspan=>colspans[1]}
+              %th{colspan: colspans[0]}=tc :balance
+              %td= totals[:balance_debit].l(currency: resource.currency)
+              %td= totals[:balance_credit].l(currency: resource.currency)
+              %th{colspan: colspans[1]}
 
 
 
-    -b.cell :details do
-      =attributes_list(@journal) do |l|
-        -l.attribute :name
-        -l.attribute :code
-        -l.attribute :nature
-        -l.attribute :currency
-        -l.attribute :closed_on
+    - b.cell :details do
+      = attributes_list(resource) do |l|
+        - l.attribute :name
+        - l.attribute :code
+        - l.attribute :nature
+        - l.attribute :currency
+        - l.attribute :closed_on
 
 
