--- a/app/views/backend/journals/show.html.haml
+++ b/app/views/backend/journals/show.html.haml
@@ -25,8 +25,8 @@
         totals["balance_#{totals[:debit]>totals[:credit] ? 'debit' : 'credit'}".to_sym] = (totals[:debit]-totals[:credit]).abs
 
       .tab-content
-        = list(resource_view.to_sym) do
-          - colspans = (resource_view == "items" ? [6, 1] : [3, 3])
+        = list(@journal_view.to_sym) do
+          - colspans = (@journal_view == "items" ? [6, 1] : [3, 3])
           %tr.important.total
             %th{colspan: colspans[0]}= tc :total
             %td= totals[:debit].l(currency: resource.currency)
