--- a/app/views/backend/journal_entries/show.html.haml
+++ b/app/views/backend/journal_entries/show.html.haml
@@ -1,21 +1,21 @@
-=journals_tag
-=main_toolbar do |t|
-  -t.edit @journal_entry if @journal_entry.updateable?
-  -t.destroy @journal_entry, :method => :delete, "data-confirm" => tg(:are_you_sure) if @journal_entry.destroyable?
+= journals_tag
+= main_toolbar do |t|
+  - t.edit @journal_entry if @journal_entry.updateable?
+  - t.destroy @journal_entry, :method => :delete, "data-confirm" => tg(:are_you_sure) if @journal_entry.destroyable?
 
-=beehive do |b|
+= beehive do |b|
 
-  -b.cell do
-    =attributes_list(@journal_entry) do |l|
-      -l.attribute :number
-      -l.attribute :printed_on
-      -l.attribute :created_on
-      -if @journal_entry.resource
-        -l.attribute :resource, :url=>true
-      -l.attribute :journal, :url=>true
-      -l.attribute :debit, :currency=>@journal_entry.financial_year.currency
-      -l.attribute :credit, :currency=>@journal_entry.financial_year.currency
+  - b.cell do
+    = attributes_list(@journal_entry) do |l|
+      - l.attribute :number
+      - l.attribute :printed_on
+      - l.attribute :created_on
+      - if @journal_entry.resource
+        - l.attribute :resource, url: true
+      - l.attribute :journal, url: true
+      - l.attribute :debit, currency: true
+      - l.attribute :credit, currency: true
 
-  -b.cell :items, :title => JournalEntry.human_attribute_name("items") do
-    =list(:items)
+  - b.cell :items, :title => JournalEntry.human_attribute_name("items") do
+    = list(:items)
     
