--- a/lib/assets/stylesheets/active-list.css.scss
+++ b/lib/assets/stylesheets/active-list.css.scss
@@ -1,1 +1,7 @@
-../../active-list/compass/stylesheets/_active-list.scss
+@import "active-list/minimal";
+@import "active-list/background";
+@import "active-list/theme";
+
+.active-list[data-list-source], .active-list {
+  @include active-list-theme;
+}
